--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CineStream - Tu plataforma de streaming</title>
+    <title>Búsqueda - CineStream</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="../src/style.css">
   </head>
   <body>
     <div id="app">
@@ -19,10 +20,10 @@
           <nav class="nav-menu">
             <ul>
               <li>
-                <a href="../index.html" class="nav-link active">Inicio</a>
+                <a href="../index.html" class="nav-link">Inicio</a>
               </li>
               <li>
-                <a href="../pages/busqueda.html" class="nav-link">Búsqueda</a>
+                <a href="../pages/busqueda.html" class="nav-link active">Búsqueda</a>
               </li>
               <li>
                 <a href="../pages/favoritos.html" class="nav-link">Favoritos</a>
@@ -40,7 +41,18 @@
         </div>
       </header>
 
-      <!-- Footer -->
+      <main class="main-content">
+        <section class="search-section">
+          <div class="search-container">
+            <input type="text" class="search-input" placeholder="Buscar películas, series...">
+            <i class="fas fa-search search-icon"></i>
+          </div>
+          <div class="search-results">
+            <p class="search-placeholder">Ingresa un término de búsqueda para comenzar</p>
+          </div>
+        </section>
+      </main>
+
       <footer class="footer">
         <div class="footer-content">
           <div class="logo">
@@ -73,6 +85,10 @@
         </div>
       </footer>
     </div>
+
+    <script type="module" src="../src/main.js"></script>
+  </body>
+</html>
 
     <script type="module" src="/src/main.js"></script>
   </body>
