--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -74,7 +74,7 @@
             </div>
             <div class="link-column">
               <h3>Redes Sociales</h3>
-              <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+              <a href="https://www.facebook.com/profile.php?id=61583595965318"><i class="fab fa-facebook"></i> Facebook</a>
               <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
               <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
             </div>
