Update Twitter link to reflect new branding

--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -72,7 +72,7 @@
             <div class="link-column">
               <h3>Redes Sociales</h3>
               <a href="https://www.facebook.com/profile.php?id=61583595965318"><i class="fab fa-facebook"></i> Facebook</a>
-              <a href="https://x.com/tweeter"><i class="fab fa-twitter"></i> Twitter</a>
+              <a href="https://x.com/"><i class="fab fa-twitter"></i> x - Twitter</a>
               <a href="instagram.com"><i class="fab fa-instagram"></i> Instagram</a>
             </div>
           </div>
