--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 CineStream. Todos los derechos reservados.</p>
+          <p>&copy; 2025 - CineStream - UTN FRSN - Programación 3 </p>
         </div>
       </footer>
     </div>
