Fix Instagram link and remove duplicate script tag

--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -73,7 +73,7 @@
               <h3>Redes Sociales</h3>
               <a href="https://www.facebook.com/profile.php?id=61583595965318"><i class="fab fa-facebook"></i> Facebook</a>
               <a href="https://x.com/"><i class="fab fa-twitter"></i> x - Twitter</a>
-              <a href="instagram.com"><i class="fab fa-instagram"></i> Instagram</a>
+              <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i> Instagram</a>
             </div>
           </div>
         </div>
@@ -84,8 +84,5 @@
     </div>
 
     <script type="module" src="../src/main.js"></script>
-  </body>
-</html>
-    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
