--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <div id="app">
@@ -33,7 +33,11 @@
               <i class="fas fa-search"></i>
             </button>
             <div class="profile">
-              <img src="https://via.placeholder.com/40" alt="Perfil" />
+              <img
+                class="img-profile"
+                src="https://thumbs.dreamstime.com/b/icono-de-usuario-avatar-perfil-persona-l%C3%ADnea-minimalista-simple-y-limpia-ideal-para-avatares-perfiles-dise%C3%B1o-general-interfaz-393116925.jpg"
+                alt="Perfil"
+              />
             </div>
           </div>
         </div>
@@ -97,14 +101,20 @@
             </div>
             <div class="link-column">
               <h3>Redes Sociales</h3>
-              <a href="https://www.facebook.com/profile.php?id=61583595965318"><i class="fab fa-facebook"></i> Facebook</a>
-              <a href="https://x.com/"><i class="fab fa-twitter"></i> x - Twitter</a>
-              <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i> Instagram</a>
+              <a href="https://www.facebook.com/profile.php?id=61583595965318"
+                ><i class="fab fa-facebook"></i> Facebook</a
+              >
+              <a href="https://x.com/"
+                ><i class="fab fa-twitter"></i> x - Twitter</a
+              >
+              <a href="https://www.instagram.com/"
+                ><i class="fab fa-instagram"></i> Instagram</a
+              >
             </div>
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 - CineStream - UTN FRSN - Programación 3 </p>
+          <p>&copy; 2025 - CineStream - UTN FRSN - Programación 3</p>
         </div>
       </footer>
     </div>
