--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
       </footer>
     </div>
 
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
